alap ui, kocka készítése #2

--- a/ReachTheEndGame/ReachTheEndGame.csproj
+++ b/ReachTheEndGame/ReachTheEndGame.csproj
@@ -8,4 +8,43 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Images\Main\blue.png" />
+    <None Remove="Images\Main\brown.png" />
+    <None Remove="Images\Main\green.png" />
+    <None Remove="Images\Main\orange.png" />
+    <None Remove="Images\Main\purple.png" />
+    <None Remove="Images\Main\red.png" />
+    <None Remove="Images\Main\white.png" />
+    <None Remove="Images\Main\yellow.png" />
+    <None Remove="plan.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\Main\blue.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Main\brown.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Main\green.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Main\orange.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Main\purple.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Main\red.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Main\white.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Main\yellow.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
