kész a design és alap kódolás #5

--- a/ReachTheEndGame/ReachTheEndGame.csproj
+++ b/ReachTheEndGame/ReachTheEndGame.csproj
@@ -8,4 +8,13 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Images\HitTheMoleGame\bomb.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Images\HitTheMoleGame\mole.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
